--- a/agentschema-emitter/src/templates/markdown/markdown.njk
+++ b/agentschema-emitter/src/templates/markdown/markdown.njk
@@ -1,4 +1,8 @@
-# {{ node.typeName.name }}
+---
+title: "{{ node.typeName.name }}"
+description: "Documentation for the {{ node.typeName.name }} type."
+slug: "reference/{{ node.typeName.name | lower }}"
+---
 
 {{ node.description }}
 
@@ -80,7 +84,7 @@ classDiagram
 The following types extend `{{ node.typeName.name }}`:
 
 {% for type in node.childTypes -%}
-- [{{ type.typeName.name }}]({{ type.typeName.name }}.md)
+- [{{ type.typeName.name }}](/reference/{{ type.typeName.name | lower }})
 {% endfor -%}
 {% endif %}
 
@@ -89,7 +93,7 @@ The following types extend `{{ node.typeName.name }}`:
 The following types are composed within `{{ node.typeName.name }}`:
 
 {% for type in compositionTypes -%}
-- [{{ type.typeName.name }}]({{ type.typeName.name }}.md)
+- [{{ type.typeName.name }}](/reference/{{ type.typeName.name | lower }})
 {% endfor -%}
 {% endif %}
 
