--- a/agentschema-emitter/src/templates/markdown/markdown.njk
+++ b/agentschema-emitter/src/templates/markdown/markdown.njk
@@ -84,7 +84,7 @@ classDiagram
 The following types extend `{{ node.typeName.name }}`:
 
 {% for type in node.childTypes -%}
-- [{{ type.typeName.name }}](/reference/{{ type.typeName.name | lower }})
+- [{{ type.typeName.name }}](../{{ type.typeName.name | lower }}/)
 {% endfor -%}
 {% endif %}
 
@@ -93,7 +93,7 @@ The following types extend `{{ node.typeName.name }}`:
 The following types are composed within `{{ node.typeName.name }}`:
 
 {% for type in compositionTypes -%}
-- [{{ type.typeName.name }}](/reference/{{ type.typeName.name | lower }})
+- [{{ type.typeName.name }}](../{{ type.typeName.name | lower }}/)
 {% endfor -%}
 {% endif %}
 
